quickAlgo-Python: Fix editor scrollbar z-index

--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -804,7 +804,7 @@ body.fullscreen #taskToolbar {
     top: 10px;
     right: 0;
     padding-top: 10px;
-    z-index: 2;
+    z-index: 10;
     display: flex;
     align-items: flex-start;
   }
